# ByteHive

./: .gitignore  Cargo.toml  Dockerfile  README.md  client_config.toml  config.toml  docker-compose.yml
.github/workflows/: rust.yml
crates/core/: Cargo.toml
crates/core/assets/: dashboard.html  filebrowser.html  password_share.html  portal.html  setup.html  share_error.html  shared.css
crates/core/src/: app.rs  auth.rs  bus.rs  config.rs  error.rs  html.rs  http.rs  lib.rs  registry.rs  users.rs
crates/core/tests/: integration_tests.rs  test_auth.rs  test_bus.rs  test_config.rs  test_error.rs  test_http.rs  test_registry.rs  test_users.rs
crates/filebrowser/: Cargo.toml  README.md
crates/filebrowser/src/: app.rs  config.rs  crypto.rs  file_type.rs  fs_util.rs  handlers.rs  http_util.rs  lib.rs  share.rs
crates/filebrowser/tests/: test_app.rs  test_crypto.rs  test_file_type.rs  test_fs_utils.rs  test_handlers.rs  test_http_util.rs  test_share.rs
crates/filesync/: Cargo.toml  README.md
crates/filesync/src/: app.rs  bundler.rs  client.rs  common.rs  exclusions.rs  known_hosts.rs  lib.rs  manifest.rs  protocol.rs  server.rs  sync_engine.rs  transport.rs  watcher.rs
crates/filesync/src/gui/: app.rs  config.rs  manager.rs  mod.rs  state.rs  theme.rs  tray.rs
crates/filesync/src/gui/components/: conflicts.rs  file_tree.rs  header.rs  log_panel.rs  mod.rs  side_panel.rs  stats_panel.rs  status_panel.rs
crates/filesync/tests/: integration_tests.rs  test_app.rs  test_bundler.rs  test_client.rs  test_conflict.rs  test_exclusions.rs  test_gui_config.rs  test_gui_manager.rs  test_gui_state_extended.rs  test_known_hosts.rs  test_manifest.rs  test_protocol.rs  test_server.rs  test_sync_engine.rs
docker/: .dockerignore  Dockerfile
docker/config/: config.toml
docs/: ARCHITECTURE.md  USAGE.md
