[workspace]
members = [
"crates/core",
"crates/filesync",
"crates/filebrowser",
"bin/bytehive"
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
log         = "0.4"
env_logger  = "0.11"
toml        = "0.8"
clap        = { version = "4", features = ["derive"] }
const_format = "0.2.35"
const-str = "1.1.0"
