[package]
name    = "bytehive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde             = { workspace = true }
serde_json        = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot       = { workspace = true }
log               = { workspace = true }
toml              = { workspace = true }
# Cryptography / identity

uuid = { version = "1", features = ["v4"] }
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }

# HTTP layer
axum              = { version = "0.7", features = ["macros"] }
tokio             = { version = "1",   features = ["full"] }
tokio-stream      = { version = "0.1" }
tower-http        = { version = "0.5", features = ["cors"] }
futures-util      = "0.3"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt"] }
futures-util = "0.3"
