[package]
name    = "bytehive-filebrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
bytehive-core    = { path = "../core" }
serde             = { workspace = true }
serde_json        = { workspace = true }
parking_lot       = { workspace = true }
log               = { workspace = true }
uuid              = { version = "1", features = ["v4"] }
sha2              = "0.10"

# For zip downloads
zip = "2"

[dev-dependencies]
tempfile = "3"
